smithy-model/src/test/resources/software/amazon/smithy/model/loader/valid/mixins/loads-mixins-with-whitespace.smithy
$version: "1.1"

namespace smithy.example

@mixin
structure A {}

@mixin
structure B {}

structure C with
   A ,,,


   ,    B ,,, ,     {}
