smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/inline-io/inline-name-override.smithy
// Parse error at line 6, column 14 near `CustomName`: Expected: '{', but found 'C'
$version: "2.0"
namespace smithy.example

operation MyOperation {
    input := CustomName {}
}
